--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-animated-numbers": "^0.16.0",
     "react-dom": "18.2.0",
     "react-type-animation": "^3.1.0",
+    "react-use-downloader": "^1.2.4",
     "resend": "^1.0.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "vercel": "^32.4.1"
   }
 }
